--- a/src/InputForm.css
+++ b/src/InputForm.css
@@ -2,4 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 4em;
+  margin-bottom: 1em;
+}
+
+.inputform__button {
+  padding: 7px !important;
+  margin-left: 5px !important;
 }
